[gd_scene format=3 uid="uid://b17mg0nc1elu1"]

[ext_resource type="PackedScene" uid="uid://bnevs3velih7g" path="res://player/PlayerModel.tscn" id="1_ct8su"]
[ext_resource type="Script" uid="uid://c5qs75jr1d0ba" path="res://menus/main_menu.gd" id="1_ot3ob"]
[ext_resource type="PackedScene" uid="uid://3aic8yx74uoe" path="res://mask/fbx_24h.tscn" id="3_rmsp1"]
[ext_resource type="PackedScene" uid="uid://bhv2fjd2inciy" path="res://mask/tartaruga/ind_tartaruga_24.tscn" id="4_218cn"]
[ext_resource type="PackedScene" uid="uid://xv22bv8k5eyk" path="res://enemies/tartaruga/2_tartaruga_correndo.tscn" id="5_vp83o"]
[ext_resource type="PackedScene" uid="uid://ca8cho1jvr58v" path="res://enemies/beijaflor/1_beijaflo_correndo.tscn" id="6_e2awe"]
[ext_resource type="PackedScene" uid="uid://bjjglffbovr48" path="res://enemies/arara/10_arara_correndo.tscn" id="7_lb38e"]
[ext_resource type="Texture2D" uid="uid://bu6kdugqxk6qi" path="res://moonless_golf_4k.exr" id="8_7fxis"]
[ext_resource type="PackedScene" uid="uid://ctg5me0cnok3b" path="res://map/arquibancada.tscn" id="9_k15nl"]
[ext_resource type="PackedScene" uid="uid://bmotokjr8s0c0" path="res://map/apoteose.tscn" id="10_4yyw3"]
[ext_resource type="PackedScene" uid="uid://tpb5dj7luaeb" path="res://map/chao.tscn" id="11_ahxlq"]
[ext_resource type="Texture2D" uid="uid://dcyne47llir6p" path="res://menus/Botao_0007_play.png" id="12_ih3s6"]
[ext_resource type="Texture2D" uid="uid://sycksxymf7ni" path="res://menus/CARNIVALSHAKE.png" id="12_rmnj8"]
[ext_resource type="Texture2D" uid="uid://8vsdq8xwqvgm" path="res://menus/Botao_0006_play-click.png" id="13_53qvp"]
[ext_resource type="Texture2D" uid="uid://ik87tiaet35d" path="res://menus/Botao_0003_instructions.png" id="14_8pvqd"]
[ext_resource type="Texture2D" uid="uid://0t17cbux3r57" path="res://menus/Botao_0002_instructions-click.png" id="15_on7of"]
[ext_resource type="Texture2D" uid="uid://kecx5ku2m5xr" path="res://menus/Botao_0001_credits.png" id="16_rmnj8"]
[ext_resource type="Texture2D" uid="uid://4t7osefav683" path="res://menus/Botao_0000_credits-click.png" id="17_0bwqk"]
[ext_resource type="Texture2D" uid="uid://bu1r4vtfh44b1" path="res://menus/Botao_0005_exit.png" id="18_5ftxp"]
[ext_resource type="Texture2D" uid="uid://cyd8s8qygkndt" path="res://menus/Botao_0004_exit-click.png" id="19_3swi0"]
[ext_resource type="Texture2D" uid="uid://dmv7u44rqexhw" path="res://menus/tela-creditos.png" id="20_on7of"]
[ext_resource type="Texture2D" uid="uid://dbgadypc06anw" path="res://menus/tela-instructions.png" id="21_0bwqk"]

[sub_resource type="BoxMesh" id="BoxMesh_ot3ob"]
size = Vector3(1000, 1, 1000)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rmsp1"]
albedo_color = Color(0.37254903, 0.29803923, 0.21960784, 1)

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_k15nl"]
panorama = ExtResource("8_7fxis")

[sub_resource type="Sky" id="Sky_lb38e"]
sky_material = SubResource("PanoramaSkyMaterial_k15nl")

[sub_resource type="Environment" id="Environment_7fxis"]
background_mode = 2
sky = SubResource("Sky_lb38e")
glow_enabled = true

[node name="MainMenu" type="Node3D" unique_id=317930211]
script = ExtResource("1_ot3ob")

[node name="Background" type="Node3D" parent="." unique_id=2051764615]

[node name="PlayerModel" parent="Background" unique_id=2092311799 instance=ExtResource("1_ct8su")]

[node name="fbx_24h" parent="Background" unique_id=1948474454 instance=ExtResource("3_rmsp1")]
transform = Transform3D(0.9613963, 0, -0.27516755, 0, 1, 0, 0.27516755, 0, 0.9613963, 8.643763, 0.05358839, -22.95869)

[node name="IND_TARTARUGA_24" parent="Background/fbx_24h" unique_id=11683180 instance=ExtResource("4_218cn")]
transform = Transform3D(0.9613963, 0, 0.27516755, 0, 1, 0, -0.27516755, 0, 0.9613963, 0, 0, 0)

[node name="2_tartaruga_correndo" parent="Background" unique_id=597139927 instance=ExtResource("5_vp83o")]
transform = Transform3D(0.16976228, 0, 0.985485, 0, 1, 0, -0.985485, 0, 0.16976228, -8.444776, 0, -13.648863)

[node name="1_beijaflo_correndo" parent="Background" unique_id=1830975067 instance=ExtResource("6_e2awe")]
transform = Transform3D(0.6301745, 0, 0.7764535, 0, 1, 0, -0.7764535, 0, 0.6301745, -8.808109, 0, -24.181032)

[node name="10_arara_correndo" parent="Background" unique_id=852007761 instance=ExtResource("7_lb38e")]
transform = Transform3D(0.26495025, 0, 0.96426207, 0, 1, 0, -0.96426207, 0, 0.26495025, -24.430195, 0, -29.717543)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Background" unique_id=1479350445]
transform = Transform3D(1, 0, 0, 0, 0.8660254, 0.5, 0, -0.5, 0.8660254, 0, 0, 0)
shadow_enabled = true

[node name="Ground" type="Node3D" parent="Background" unique_id=1688591651]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="Background/Ground" unique_id=2112605224]
mesh = SubResource("BoxMesh_ot3ob")
surface_material_override/0 = SubResource("StandardMaterial3D_rmsp1")

[node name="WorldEnvironment" type="WorldEnvironment" parent="Background" unique_id=279303655]
environment = SubResource("Environment_7fxis")

[node name="Bench" type="Node3D" parent="Background" unique_id=1466691906]

[node name="arquibancada" parent="Background/Bench" unique_id=458030895 instance=ExtResource("9_k15nl")]
transform = Transform3D(0.83774734, 0, 0.5460581, 0, 1, 0, -0.5460581, 0, 0.83774734, -59.527256, 0, -62.200092)

[node name="arquibancada2" parent="Background/Bench" unique_id=2007998100 instance=ExtResource("9_k15nl")]
transform = Transform3D(0.83774734, 0, 0.5460581, 0, 1, 0, -0.5460581, 0, 0.83774734, -43.66925, 0, -72.53661)

[node name="arquibancada3" parent="Background/Bench" unique_id=1418038608 instance=ExtResource("9_k15nl")]
transform = Transform3D(0.83774734, 0, 0.5460581, 0, 1, 0, -0.5460581, 0, 0.83774734, -91.25389, 0, -41.520123)

[node name="arquibancada4" parent="Background/Bench" unique_id=719258428 instance=ExtResource("9_k15nl")]
transform = Transform3D(0.83774734, 0, 0.5460581, 0, 1, 0, -0.5460581, 0, 0.83774734, -75.39589, 0, -51.856644)

[node name="arquibancada5" parent="Background/Bench" unique_id=130145192 instance=ExtResource("9_k15nl")]
transform = Transform3D(0.83774734, 0, 0.5460581, 0, 1, 0, -0.5460581, 0, 0.83774734, -27.832722, 0, -82.85913)

[node name="arquibancada6" parent="Background/Bench" unique_id=97093141 instance=ExtResource("9_k15nl")]
transform = Transform3D(0.83774734, 0, 0.5460581, 0, 1, 0, -0.5460581, 0, 0.83774734, -11.97472, 0, -93.19565)

[node name="arquibancada12" parent="Background/Bench" unique_id=48659460 instance=ExtResource("9_k15nl")]
transform = Transform3D(0.83774734, 0, 0.5460581, 0, 1, 0, -0.5460581, 0, 0.83774734, -107.121155, 0, -31.17757)

[node name="arquibancada41" parent="Background/Bench" unique_id=1298123682 instance=ExtResource("9_k15nl")]
transform = Transform3D(0.83774734, 0, 0.5460581, 0, 1, 0, -0.5460581, 0, 0.83774734, 3.9110126, 0, -103.55025)

[node name="arquibancada7" parent="Background/Bench" unique_id=234476113 instance=ExtResource("9_k15nl")]
transform = Transform3D(0.83774734, 0, 0.5460581, 0, 1, 0, -0.5460581, 0, 0.83774734, 67.23877, 0, -144.74406)

[node name="arquibancada8" parent="Background/Bench" unique_id=1317257812 instance=ExtResource("9_k15nl")]
transform = Transform3D(0.83774734, 0, 0.5460581, 0, 1, 0, -0.5460581, 0, 0.83774734, -170.65134, 9.536743e-07, 10.164062)

[node name="arquibancada9" parent="Background/Bench" unique_id=1108788881 instance=ExtResource("9_k15nl")]
transform = Transform3D(0.83774734, 0, 0.5460581, 0, 1, 0, -0.5460581, 0, 0.83774734, 35.51213, 0, -124.0641)

[node name="arquibancada10" parent="Background/Bench" unique_id=1502964772 instance=ExtResource("9_k15nl")]
transform = Transform3D(0.83774734, 0, 0.5460581, 0, 1, 0, -0.5460581, 0, 0.83774734, 51.370132, 0, -134.40062)

[node name="arquibancada11" parent="Background/Bench" unique_id=936546821 instance=ExtResource("9_k15nl")]
transform = Transform3D(0.83774734, 0, 0.5460581, 0, 1, 0, -0.5460581, 0, 0.83774734, -154.81482, 9.536743e-07, -0.15844822)

[node name="arquibancada13" parent="Background/Bench" unique_id=1367734800 instance=ExtResource("9_k15nl")]
transform = Transform3D(0.83774734, 0, 0.5460581, 0, 1, 0, -0.5460581, 0, 0.83774734, -138.95682, 9.536743e-07, -10.494966)

[node name="arquibancada14" parent="Background/Bench" unique_id=2040013930 instance=ExtResource("9_k15nl")]
transform = Transform3D(0.83774734, 0, 0.5460581, 0, 1, 0, -0.5460581, 0, 0.83774734, 19.644867, 0, -113.72154)

[node name="arquibancada42" parent="Background/Bench" unique_id=635261165 instance=ExtResource("9_k15nl")]
transform = Transform3D(0.83774734, 0, 0.5460581, 0, 1, 0, -0.5460581, 0, 0.83774734, -123.07108, 9.536743e-07, -20.849571)

[node name="apoteose" parent="Background" unique_id=403078524 instance=ExtResource("10_4yyw3")]
transform = Transform3D(0.6189594, 0, 1.3443549, 0, 1.4799999, 0, -1.3443549, 0, 0.6189594, -166.20522, 9.913874, -40.394505)

[node name="Chao" parent="Background" unique_id=1895501329 instance=ExtResource("11_ahxlq")]

[node name="Camera3D" type="Camera3D" parent="." unique_id=1441184956]
transform = Transform3D(0.8660254, 0, 0.5, 0, 1, 0, -0.5, 0, 0.8660254, -0.058, 1, 2)

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=152858618]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer" unique_id=1670955725]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 120

[node name="Title" type="TextureRect" parent="CanvasLayer/MarginContainer" unique_id=1865832825]
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("12_rmnj8")
expand_mode = 5
stretch_mode = 5

[node name="Buttons" type="Control" parent="CanvasLayer/MarginContainer" unique_id=170974264]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/Buttons" unique_id=777429283]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -300.0
offset_right = 450.0
grow_vertical = 0
theme_override_constants/separation = 16
alignment = 1

[node name="PlayButton" type="TextureButton" parent="CanvasLayer/MarginContainer/Buttons/VBoxContainer" unique_id=1939397826]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("12_ih3s6")
texture_hover = ExtResource("13_53qvp")
ignore_texture_size = true
stretch_mode = 5

[node name="InstructionsButton" type="TextureButton" parent="CanvasLayer/MarginContainer/Buttons/VBoxContainer" unique_id=1557963295]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("14_8pvqd")
texture_hover = ExtResource("15_on7of")
ignore_texture_size = true
stretch_mode = 5

[node name="CreditsButton" type="TextureButton" parent="CanvasLayer/MarginContainer/Buttons/VBoxContainer" unique_id=822240088]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("16_rmnj8")
texture_hover = ExtResource("17_0bwqk")
ignore_texture_size = true
stretch_mode = 5

[node name="ExitButton" type="TextureButton" parent="CanvasLayer/MarginContainer/Buttons/VBoxContainer" unique_id=133948937]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("18_5ftxp")
texture_hover = ExtResource("19_3swi0")
ignore_texture_size = true
stretch_mode = 5

[node name="InstructionsPanel" type="Control" parent="CanvasLayer" unique_id=1338221100]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="CanvasLayer/InstructionsPanel" unique_id=521524756]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.78431374)

[node name="Image" type="TextureRect" parent="CanvasLayer/InstructionsPanel" unique_id=666373724]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("21_0bwqk")
expand_mode = 3
stretch_mode = 5

[node name="BackButton" type="Button" parent="CanvasLayer/InstructionsPanel" unique_id=1788883450]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="CreditsPanel" type="Control" parent="CanvasLayer" unique_id=1444918603]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="CanvasLayer/CreditsPanel" unique_id=230467035]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.78431374)

[node name="Image" type="TextureRect" parent="CanvasLayer/CreditsPanel" unique_id=328935366]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("20_on7of")
expand_mode = 3
stretch_mode = 5

[node name="BackButton" type="Button" parent="CanvasLayer/CreditsPanel" unique_id=969367915]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[connection signal="pressed" from="CanvasLayer/MarginContainer/Buttons/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/Buttons/VBoxContainer/InstructionsButton" to="." method="_on_instructions_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/Buttons/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/Buttons/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/InstructionsPanel/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="CanvasLayer/CreditsPanel/BackButton" to="." method="_on_back_button_pressed"]
